[package]
name = "pesta"
version = "0.1.0"
authors = ["ksqsf <i@ksqsf.moe>"]
edition = "2018"
license = "MIT"
description = "Pest analyzer"
homepage = "https://github.com/ksqsf/pest-mode"
repository = "https://github.com/ksqsf/pest-mode"
documentation = "https://docs.rs/pesta"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
pest = "2.1"
pest_meta = "2.1"
pest_vm = "2.1"
json = "0.12"
